fix(topScroller): trying to fix functionality on IOS

--- a/churchApp/src/global.scss
+++ b/churchApp/src/global.scss
@@ -233,7 +233,7 @@ body.light-theme {
     z-index: 999;
     position: fixed;
     max-width: 45px;
-    bottom: 80px;
+    bottom: 120px;
     right: 20px;
     border-radius: 20px;
     cursor: pointer;
